[package]
name = "resolve"
version = "0.1.0"
edition = "2024"
description = "A Rust-based Django template compiler that pre-compiles templates into flat HTML"

[dependencies]
compiler = { path = "../compiler" }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.1"
serde_json = "1.0.149"
walkdir = "2.5.0"
sha2 = "0.11.0"
rustc-hash = "2.1.2"
thiserror = "2.0.18"
anyhow = "1.0.102"
mimalloc = "0.1.48"

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2.2.0"

[lints]
workspace = true
